# tritonus

./: .cvsignore  .gitignore  INSTALL  Makefile.in  NEWS  README  README.md  README.midi  README_midi  README_mp3  build-common.xml  build-debug.xml  build.xml  configure  configure.in  pom.xml  version
.github/workflows/: maven.yml
doc/: AlsaMidiDevice  AudioOutputStrem_architecture  CallSequence.txt  Makefile  Makefile.in  TODO  TODO-matthias.txt  TODO-micro-matthias.txt  TODO-mmapi-matthias.txt  cdda.txt  cdda_url.txt  tritonus_mod_proposal.txt
doc/bindists/cdda/: readme.txt
doc/bindists/vorbis/: readme.txt
src/lib/alsa/: HandleFieldHandler.cc  HandleFieldHandler.hh  Makefile  Makefile.in  common.c  common.cc  common.h  constants_check.h  init.c  init.cc  libtritonusalsa.so.1.0  org_tritonus_lowlevel_alsa_ASequencer0.c  org_tritonus_lowlevel_alsa_ASequencer0.cc  org_tritonus_lowlevel_alsa_ASequencer0.h  org_tritonus_lowlevel_alsa_Alsa.c  org_tritonus_lowlevel_alsa_Alsa.cc  org_tritonus_lowlevel_alsa_AlsaCtl.c  org_tritonus_lowlevel_alsa_AlsaCtl.cc  org_tritonus_lowlevel_alsa_AlsaCtlCardInfo.c  org_tritonus_lowlevel_alsa_AlsaCtlCardInfo.cc  org_tritonus_lowlevel_alsa_AlsaMixer.c  org_tritonus_lowlevel_alsa_AlsaMixer.cc  org_tritonus_lowlevel_alsa_AlsaMixerElement.c  org_tritonus_lowlevel_alsa_AlsaMixerElement.cc  org_tritonus_lowlevel_alsa_AlsaPcm.c  org_tritonus_lowlevel_alsa_AlsaPcm.cc  org_tritonus_lowlevel_alsa_AlsaPcmHWParams.c  org_tritonus_lowlevel_alsa_AlsaPcmHWParamsFormatMask.c  org_tritonus_lowlevel_alsa_AlsaPcmSWParams.c  org_tritonus_lowlevel_alsa_AlsaPcm_HWParams.c  org_tritonus_lowlevel_alsa_AlsaPcm_HWParams.cc  org_tritonus_lowlevel_alsa_AlsaPcm_HWParams_FormatMask.c  org_tritonus_lowlevel_alsa_AlsaPcm_HWParams_FormatMask.cc  org_tritonus_lowlevel_alsa_AlsaPcm_SWParams.c  org_tritonus_lowlevel_alsa_AlsaPcm_SWParams.cc  org_tritonus_lowlevel_alsa_AlsaSeq.c  org_tritonus_lowlevel_alsa_AlsaSeq.cc  org_tritonus_lowlevel_alsa_AlsaSeq0.cc  org_tritonus_lowlevel_alsa_AlsaSeqClientInfo.c  org_tritonus_lowlevel_alsa_AlsaSeqClientInfo.cc  (+27 more)
src/lib/cdda/: Makefile.in  org_tritonus_lowlevel_cdda_CDDA.c
src/lib/cdparanoia/: Makefile.in  common.c  handle_t.h  handle_t.hh  handlers.cc  org_tritonus_lowlevel_cdda_cdparanoia_Cdparanoia.c  org_tritonus_lowlevel_cdda_cdparanoia_Cdparanoia.cc
src/lib/common/: HandleFieldHandler.cc  HandleFieldHandler.h  HandleFieldHandler.hh  Makefile.in  common.c  common.cc  common.h  debug.h
src/lib/cooked_ioctl/: Makefile.in  org_tritonus_lowlevel_cdda_cooked_ioctl_CookedIoctl.c
src/lib/esd/: Makefile  Makefile.in  common.h  libesdtritonus.so.1.0  org_tritonus_lowlevel_esd_EsdRecordingStream.c  org_tritonus_lowlevel_esd_EsdRecordingStream.cc  org_tritonus_lowlevel_esd_EsdRecordingStream.h  org_tritonus_lowlevel_esd_EsdSample.c  org_tritonus_lowlevel_esd_EsdSample.cc  org_tritonus_lowlevel_esd_EsdSample.h  org_tritonus_lowlevel_esd_EsdStream.c  org_tritonus_lowlevel_esd_EsdStream.cc  org_tritonus_lowlevel_esd_EsdStream.h
src/lib/fluidsynth/: Makefile.in  fluidsynth_jni.c  fluidsynth_jni.h  org_tritonus_midi_device_fluidsynth_FluidSynthesizer.c
src/lib/gsvorbis/: Makefile.in  org_tritonus_lowlevel_vorbis_GreatlySimplifiedVorbis.cc
src/lib/lame/: .cvsignore  Makefile.in  lameapi.c  lameapi.h  org_tritonus_lowlevel_lame_Lame.c
src/lib/pvorbis/: Makefile.in  bitrate.c  block.c  codebook.c  codec_internal.h  common.h  envelope.c  floor1.c  framing.c  info.c  mapping0.c  org_tritonus_lowlevel_pogg_Buffer.c  org_tritonus_lowlevel_pogg_Packet.c  org_tritonus_lowlevel_pogg_Page.c  org_tritonus_lowlevel_pogg_StreamState.c  org_tritonus_lowlevel_pogg_SyncState.c  org_tritonus_lowlevel_pvorbis_Comment.c  org_tritonus_lowlevel_pvorbis_DspState.c  org_tritonus_lowlevel_pvorbis_Info.c  os.h  res0.c
src/lib/saint/: Makefile.in  jstreambuf.cpp  jstreambuf.hpp  org_tritonus_lowlevel_saint_Saint.cpp
src/lib/vorbis/: Makefile.in  common.h  org_tritonus_lowlevel_ogg_Buffer.c  org_tritonus_lowlevel_ogg_Packet.c  org_tritonus_lowlevel_ogg_Page.c  org_tritonus_lowlevel_ogg_StreamState.c  org_tritonus_lowlevel_ogg_SyncState.c  org_tritonus_lowlevel_vorbis_Block.c  org_tritonus_lowlevel_vorbis_Comment.c  org_tritonus_lowlevel_vorbis_DspState.c  org_tritonus_lowlevel_vorbis_Info.c
src/misc/: saol.grammar
src/org/tritonus/: Configuration.properties  README  TDebug.java  (+3 more)
test/: AlsaCtlTest.java  AlsaMixerTest.java  BufferingTest.java  CddaMidLevelTest.java  CddaTest.java  ClipPlayer.java  Convert.java  CreateEmptySequence.java  Makefile  Makefile.in  MidiMessageTest.java  MidiPlayer2.java  Mp3Encoder.java  MpegPlayer.java  MpegPlayer0.java  MpegPlayer2.java  Player.java  ShowFormat.java  Sine.java  SkipTest.java  SystemInfo.java  VorbisEncoder.java  run-ClipPlayer  run-Player  saint.java
test/applets/: ClipPlayerApplet.java
test/midi/: .cvsignore  AlsaMidiDevicesTest.java  AlsaMidiInTest.java  AlsaMidiOutTest.java  AlsaSequencerTest.java  Clients.java  DumpReceiver.java  DumpSequence.java  Makefile  MidiInTest.java  MshMidiInTest.java  MshMidiOutTest.java  SequencerToMidi.java  SequencerToSynthesizer.java  alsamidiout.c
test/misc/: LineTest.java
test/mmapi/: .cvsignore  AudioPlayer.java  JMFDataSourceTest.java  TonePlayer.java
test/saol/: BCELTest.java
test/suite/: AlsaCtlTestCase.java  AlsaMixerTestCase.java  AlsaTestSuite.java  AuAudioFileReaderTestCase.java  BaseAudioFileReaderTestCase.java  audiofilereader.properties  build.xml  formatconversionprovider.properties
test/suite-micro/: .cvsignore  build.xml
tritonus-alsa/: pom.xml
tritonus-aos/: pom.xml
tritonus-cdda/: README.md  pom.xml
tritonus-core/: pom.xml
tritonus-dsp/: pom.xml
tritonus-esd/: pom.xml
tritonus-fluidsynth/: pom.xml
tritonus-gsm/: pom.xml
tritonus-javasequencer/: pom.xml
tritonus-jorbis/: pom.xml
tritonus-midishare/: pom.xml
tritonus-mp3/: pom.xml
tritonus-pvorbis/: pom.xml
tritonus-remaining/: pom.xml
tritonus-saol/: pom.xml
tritonus-share/: pom.xml
tritonus-src/: pom.xml
tritonus-vorbis/: pom.xml
util/: 117env  118env
(+1038 files in other folders)
